--- a/views/user.ejs
+++ b/views/user.ejs
@@ -10,51 +10,63 @@
     <table border="1" cellpadding="7" cellspacing="7">
         <tr>
             <th width="50px">No</th>
-            <th>Name</th>
+                <th width="50px">Inv No</th>
+            <th>Nombre</th>
             <th>Email</th>
-            <th>Password</th>
+            <th>Familia</th>
+            <th>adultos</th>
+            <th>menores</th>
             <th>Action</th>
         </tr>
-                       
-        <% if(data.length){ 
-                        
+
+        <% if(data.length){
+
          for(var i = 0;i < data.length;i++) { %>
-         
+
         <tr>
             <td><%=(i+1)%></td>
-            <td><%=data[i].name%></td>
-            <td><%=data[i].email%></td>
-            <td><%=data[i].password%></td>
+            <td><%=data[i].invitadoId%></td>
+            <td><%=data[i].nombre%></td>
+            <td><%=data[i].correo%></td>
+            <td><%=data[i].familia%></td>
+            <td><%=data[i].adultos%></td>
+            <td><%=data[i].menor%></td>
             <td>
-                <a class="a-inside edit" href="/api/user/<%=data[i].user_id%>">Edit</a>
-               
-                <a class="a-inside delete" href="javascript:void(0)" onClick="deleteUser(<%=data[i].user_id%>)">Delete</a>
-               
+                <a class="a-inside edit" href="/api/invitado/<%=data[i].correo%>">Edit</a>
+
+                <a class="a-inside delete" href="javascript:void(0)" onClick="deleteUser('<%=data[i].correo%>')">Delete</a>
+
             </td>
         </tr>
     <% }
-    
+
      }else{ %>
          <tr>
             <td colspan="5">No Data</td>
          </tr>
     <% } %>
-                                      
+
     </table>
 </div>
 <div class="page-data">
-    
+
     <form method="post" action="" id="the-form">
         <table cellpadding="11">
         <tr>
-            <td class="label">Name</td><td>: <input type="text" name="name"></td>
+            <td class="label">Nombre</td><td>: <input type="text" name="nombre"></td>
          </tr>
         <tr>
-            <td class="label">Email</td><td>: <input type="text" name="email"></td>
+            <td class="label">Email</td><td>: <input type="text" name="correo"></td>
          </tr>
           <tr>
-            <td class="label">Password</td><td>: <input type="password" name="password"></td>
+            <td class="label">Familia</td><td>: <input type="text" name="familia"></td>
          </tr>
+              <tr>
+                 <td class="label">adultos</td><td>: <input type="number" name="adultos"></td>
+              </tr>
+            <tr>
+                 <td class="label">menores</td><td>: <input type="number" name="menor"></td>
+              </tr>
          <tr>
             <td class="label"></td>
             <td>
@@ -71,44 +83,44 @@
 <script>
 
     function saveUser(){
-       
+
        $.ajax({
-        
-        url:"/api/user",
+
+        url:"/api/invitado",
         type:"post",
         data:$("#the-form").serialize(),
         success:function(res){
-            
+
             window.location.reload();
             return false;
         },
         error:function(xhr, status, error){
-            
+
             console.log(xhr.responseText);
             var err = '';
             $.each(JSON.parse(xhr.responseText) , function(i, item) {
-               
+
                  err +='<li>'+item.msg+'</li>';
             });
-            $(".err-area").html(err);    
+            $(".err-area").html(err);
             return false;
         }
-        
+
        });
     }
-    
+
     function deleteUser(user_id){
-    
+
         $.ajax({
-            url:"/api/user/"+user_id,
+            url:"/api/invitado/"+user_id,
             type: 'DELETE',
             success: function(res) {
-                
+
                 window.location.reload();
                 return false;
             },
             error:function(xhr, status, error){
-            
+
                 console.log(xhr.responseText);
                 alert("Error deleting");
                 return false;
